public/stylesheets/style.css
/* ... */
/* The side navigation menu */
.sidebar {
    margin: 0;
    padding: 0;
    width: 150px;
    background-color: #f1f1f1;
    position: fixed;
    height: 100%;
    overflow: auto;
  }
  
  /* Sidebar links */
  .sidebar a {
    display: block;
    color: black;
    padding: 16px;
    text-decoration: none;
    font-size: 1em;
    text-align: center;
  }
  #head{
    border-bottom: 1px solid rgb(203, 200, 200);
  }
  /* Active/current link */
  .sidebar a.active {
    background-color: #505151;
    color: rgb(245, 244, 244);
  }
  
  /* Links on mouse-over */
  .sidebar a:hover:not(.active) {
    background-color: rgb(152, 146, 146);
    color: white;
  }
  
  /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
  div.content {
    margin-left: 150px;
    padding: 1px 16px;
  }
  
  /* On screens that are less than 700px wide, make the sidebar into a topbar */
  @media screen and (max-width: 700px) {
    .sidebar {
      width: 100%;
      height: auto;
      position: relative;
    }
    .sidebar a {float: left;}
    div.content {margin-left: 0;}
  }
  
  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
  @media screen and (max-width: 400px) {
    .sidebar a {
      text-align: center;
      float: none;
    }
}

